# ros-car

./: CMakeLists.txt  README.md  package.xml
config/: debug_robot.rviz  display.rviz  drive_robot.rviz  joystick.yaml  my_controllers.yaml
config/joysticks/: joystick_xbox360.yaml  joystick_xbox_series.yaml
description/: gazebo_control.xacro  robot.xacro  robot_main.xacro  ros2_control.xacro
description/cubot_v2/: CMakeLists.txt  package.xml
description/cubot_v2/launch/: display.launch  gazebo.launch
description/cubot_v2/meshes/: caster_link.STL  left_wheel_link.STL  right_wheel_link.STL
description/cubot_v2/urdf/: cubot_v2_split.SLDPRT.csv  cubot_v2_split.SLDPRT.urdf  cubot_v2_sw2urdf.urdf
description/cubot_v2_old/meshes/: caster_link.STL  left_wheel_link.STL  right_wheel_link.STL
description/cubot_v2_old/urdf/: cubot_v2_sw2urdf.urdf
description/cubot_v2_sw2urdf/: CMakeLists.txt  package.xml
description/cubot_v2_sw2urdf/launch/: display.launch  gazebo.launch
description/cubot_v2_sw2urdf/meshes/: left_wheel_link.STL  right_wheel_link.STL
description/cubot_v2_sw2urdf/urdf/: cubot_v2_sw2urdf.csv  cubot_v2_sw2urdf.urdf
description/demo/: inertial_macros.xacro  robot.urdf.xacro
description/hamburobot_mecanum_sw2urdf/meshes/: camer_link.STL  front_left_link.STL  (+4 more)
launch/: all.launch.py  display.launch.py  gazebo.launch.py  joy.launch.py  launch_all_sim_rsp_joy.launch.py  launch_real_robot_joy.launch.py  launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py  test.launch.py
scripts/: twist_to_twist_stamped.py
worlds/: empty.world
(+1 files in other folders)
